# enseada

./: .codeclimate.yml  .dockerignore  .env  .env.example  .envrc  .gitignore  .snyk  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDELINES.md  LICENSE  Makefile  README.md  SECURITY.md  build.rs  docker-compose.yml  enseada.yml  flake.nix  go.mod  go.sum  justfile  magefile.go  mix.exs  package.json  setup.sh  shell.nix  yarte.toml
acl/: Cargo.toml
acl/src/: enforcer.rs  error.rs  lib.rs  model.rs
acl/src/api/: mod.rs
acl/src/enforcer/: reloader.rs
api/: Cargo.toml  build.rs  package.json
api/api_derive/: Cargo.toml
api/api_derive/src/: lib.rs
api/docs/: index.yml.njk
api/src/: client.rs  core.rs  error.rs  gvk.rs  lib.rs  meta.rs  pat.rs  rbac.rs  tls.rs  users.rs  watch.rs
api_server/: Cargo.toml
api_server/src/: client.rs  error.rs  logger.rs  main.rs  streaming_client.rs  telemetry.rs  tls.rs
api_server/src/config/: cli.rs  controllers.rs  db.rs  gc.rs  grpc.rs  http.rs  log.rs  mod.rs  tls.rs
api_server/src/controllers/: users.rs
api_server/src/grpc/: mod.rs  users.rs
api_server/src/http/: auth.rs  handlers.rs  mod.rs  resource.rs  telemetry.rs
api_server/src/resources/: id.rs  mod.rs  watcher.rs
auth/: Cargo.toml
auth/src/: handler.rs  lib.rs
config/: dev.exs  (+5 more)
controller_runtime/: Cargo.toml
controller_runtime/src/: error.rs  garbage_collector.rs  gc.rs  id.rs  lib.rs  manager.rs  watcher.rs
couchdb/: Cargo.toml
couchdb/src/: changes.rs  client.rs  db.rs  design_document.rs  error.rs  index.rs  lib.rs  migrator.rs  responses.rs  view.rs
dashboard/: .env.local  .gitignore  Cargo.toml  README.md  bootstrap.js  index.html  package.json  tsconfig.json  webpack.config.js
dashboard/assets/scss/: colors.scss  style.scss
dashboard/src/: App.vue  app.rs  auth.ts  errors.ts  i18n.ts  index.js  index.ts  lib.rs  oauth.js  oauth.ts  router.js  router.rs  router.ts  sections.ts  store.js  utils.test.ts  utils.ts
dashboard/src/component/: mod.rs  navbar.rs
dashboard/src/components/: AddPermissionModal.vue  Navbar.vue  PackageCard.vue  PermissionsTable.vue  SideMenu.vue  TreeBrowser.vue
dashboard/src/filters/: index.ts  pascalCase.test.ts  pascalCase.ts  titleCase.test.ts  titleCase.ts  truncate.test.ts  truncate.ts
dashboard/src/http/: HttpClient.ts  Method.ts  Page.ts  ResponseError.ts  Service.ts  index.js  index.ts
dashboard/src/langs/: en.ts
dashboard/src/mixins/: createForm.ts  index.ts  listPage.ts  permissionsTable.ts  showPage.ts  validatedForm.ts
dashboard/src/store/: containers.ts  index.ts  types.ts
dashboard/src/types/: containers.ts  index.ts  roles.ts  users.ts
dashboard/src/validations/: index.ts
dashboard/src/view/: home.rs  mod.rs  not_found.rs
dashboard/src/views/: About.vue  Home.vue  NotFound.vue  OAuthCallback.vue
dashboard/static/: index.html
events/: Cargo.toml
events/events_derive/: Cargo.toml
events/events_derive/src/: lib.rs
events/src/: lib.rs
futon/: Cargo.toml
futon/src/: client.rs  error.rs  lib.rs  model.rs
lib/: Cargo.toml  enseada.ex  enseada_web.ex
lib/enseada/: application.ex  database.ex  helpers.ex  kv.ex  mapper.ex  repositories.ex
lib/enseada/database/: initializer.ex
lib/enseada/kv/: adapter.ex  in_memory.ex  supervisor.ex
lib/enseada/maven/: resolver.ex  storage.ex  templates.ex  url.ex
lib/enseada/repository/: maven.ex
lib/enseada_web/: endpoint.ex  gettext.ex  router.ex  serve_index.ex
lib/enseada_web/channels/: user_socket.ex
lib/enseada_web/controllers/: maven_controller.ex  ui_controller.ex
lib/enseada_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  ui_view.ex
lib/src/: app.rs  backports.rs  error.rs  events.rs  expiration.rs  guid.rs  lib.rs  pagination.rs  predicate.rs  secure.rs  storage.rs  urn.rs
lib/src/couchdb/: mod.rs  repository.rs
maven/: Cargo.toml
maven/maven_version/: Cargo.toml
maven/maven_version/src/: compare.rs  error.rs  lexer.rs  lib.rs  parser.rs  version.rs
maven/src/: entity.rs  file.rs  lib.rs  service.rs  storage.rs
oauth/: Cargo.toml
oauth/src/: client.rs  code.rs  error.rs  handler.rs  lib.rs  response.rs  scope.rs  session.rs  token.rs
oauth/src/api/: mod.rs
oauth/src/handler/: auth.rs  introspection.rs  mod.rs  revocation.rs  token.rs
oauth/src/persistence/: storage.rs
oauth/src/request/: auth.rs  mod.rs  pkce.rs  token.rs
observability/: Cargo.toml
observability/src/: entity.rs  lib.rs  service.rs
oci/: Cargo.toml
oci/src/: digest.rs  error.rs  events.rs  lib.rs  manifest.rs  mime.rs  storage.rs
oci/src/entity/: blob.rs  manifest.rs  mod.rs  repo.rs  upload.rs
oci/src/service/: blob.rs  manifest.rs  mod.rs  repo.rs  upload.rs
old_api/: .boatsrc  Cargo.toml  README.md
old_api/docs/: index.yml.njk
old_api/docs/paths/: index.yml.njk
old_api/src/: lib.rs  rbac.rs  users.rs
old_rbac/: Cargo.toml
old_rbac/src/: enforcer.rs  model.rs  role.rs  rule.rs  watcher.rs
old_users/: Cargo.toml
old_users/src/: events.rs  lib.rs  service.rs
server/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  enseada.yml  package.json
server/auth/: Cargo.toml
server/auth/src/: lib.rs  user.rs
server/cqrs/: Cargo.toml
server/cqrs/src/: command.rs  event.rs  lib.rs  reducer.rs
server/docs/: openapi.yml
server/futon/: Cargo.toml
server/futon/src/: changes.rs  client.rs  db.rs  error.rs  lib.rs  partition.rs  request.rs  response.rs
server/libapi/: Cargo.toml
server/libapi/src/: error.rs  id.rs  lib.rs  pagination.rs  reducer.rs
server/migrations/: 001-oauth.json  002-users.json  003-rbac.json  004-oci.json  005-maven.json
server/src/: api.rs  assets.rs  config.rs  dashboard.rs  error.rs  guid.rs  logger.rs  main.rs  observability.rs  pagination.rs  rbac.rs  responses.rs  routes.rs  secure.rs  server.rs  storage.rs  template.rs  tracing.rs  user.rs
server/templates/: base.html  index.html  redoc.html
users/: Cargo.toml
users/src/: api.rs  controller.rs  entity.rs  events.rs  lib.rs  service.rs
(+725 files in other folders)
