[workspace]
members = [
    # New stuff
    "api_server",
    "api",
    "users",
    "controller_runtime",
    "acl",

    # Old Stuff
    "old_api",
    "couchdb",
    "lib",
    "old_users",
    "observability",
    "old_rbac",
    "oci",
    "maven",
    "oauth",
#    "server",
]

[profile.release]
lto = "thin"
