[workspace]
members = [
    # New stuff
    "api_server",
    "api",
    "controller_runtime",
    "acl",
    "auth",
    "oauth",

    # Old Stuff
    "old_api",
    "couchdb",
    "lib",
    "old_users",
    "observability",
    "old_rbac",
    "oci",
    "maven",
    "old_oauth",
#    "server",
]

[profile.release]
lto = "thin"
