[package]
name = "acl"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
controller_runtime = { path = "../controller_runtime" }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
glob = "~0.3"
lazy_static = "^1"
tokio = { version = "^1", features = ["sync"] }
