[package]
name = "api"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "^1", features = ["derive"] }
http = "~0.2"
chrono = { version = "~0.4", features = ["serde"] }
lazy_static = "^1"
bimap = "~0.6"
tokio = { version = "^1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
serde_json = "^1"