[package]
name = "api_server"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "enseada-api-server"
path = "src/main.rs"


[dependencies]
http = "~0.2"
warp = { version = "~0.3", features = ["tls"] }
tokio = { version = "^1.3", features = ["full"] }
hyper = "~0.14"
actix = "0.11.0-beta.3"
actix-rt = "~2.1"
async-trait = "~0.1"
url = { version = "^2", features = ["serde"] }
futures = "~0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
crossbeam-channel = "~0.5"
chrono = { version = "~0.4", features = ["serde"]}

# Config
structopt = "~0.3"
config = { version = "~0.11", default-features = false, features = ["yaml"]}
humantime = "^2"
humantime-serde = "^1"

# Logging
slog = "~2.7"
slog-async = "~2.6"
slog-json = "~2.3"
slog-term = "~2.8"

couchdb = { path = "../couchdb" }
controller_runtime = { path = "../controller_runtime" }
api = { path = "../api" }
users = { path = "../users" }
