[package]
name = "auth"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
controller_runtime = { path = "../controller_runtime" }
serde = { version = "^1", features = ["derive"] }
slog = "^2"
tokio = { version = "^1", features = ["macros"] }
lazy_static = "^1"
oauth = { path = "../oauth" }
url = { version = "^2", features = ["serde"] }
