[package]
name = "controller_runtime"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "~0.1"
http = "~0.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
actix = "0.11.0-beta.3"
futures = "~0.3"
slog = "2"
tokio = { version = "^1", features = ["time"] }
chrono = "~0.4"

api = { path = "../api" }
couchdb = { path = "../couchdb" }
