[package]
name = "couchdb"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
derivative = "2.1"
futures = "0.3"
log = "0.4"
reqwest = { version = "~0.11", features = ["json", "rustls-tls", "stream"] }
rustls = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
snafu = "0.6"
url = { version = "2.1", features = ["serde"] }
