[package]
name = "events"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events_derive = { path = "./events_derive" }
actix = "0.11.0-beta.3"
async-trait = "0.1"
