[package]
name = "enseada"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
base64 = "0.12"
couchdb = { path = "../couchdb" }
chrono = { version = "0.4.15", features = ["serde"] }
hold = "0.1.0-alpha.4"
hex = "0.4"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
ring = "0.16"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
async-trait = "0.1"
tracing = { version = "0.1.15", features = ["log-always"] }
tracing-futures = "0.2.4"