[package]
name = "maven"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
enseada = { path = "../lib" }
maven_version = { path = "./maven_version", features = ["serde"] }
events = { path = "../events" }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"

# Olly
log = "0.4"
tracing = "0.1.15"
tracing-futures = "0.2.4"

