[package]
name = "oauth"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
# Enseada
enseada = { path = "../lib" }
events = { path = "../events" }
users = { path = "../users" }

# HTTP
http = "0.2"
url = "2.1"

# Misc
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Olly
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"