[package]
name = "oauth"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "~0.1"
serde_json = "^1"
http = "~0.2"

api = { path = "../api" }
controller_runtime = { path = "../controller_runtime" }
serde = { version = "^1", features = ["derive"] }
slog = "^2"
lazy_static = "^1"
url = { version = "^2", features = ["serde"] }
tokio = { version = "^1", features = ["macros"] }
