[package]
name = "oauth"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "~0.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
http = "~0.2"
slog = "^2"
url = { version = "^2", features = ["serde"] }
chrono = { version = "~0.4", feautres = ["serde"] }
crypto = { path = "../crypto" }
