[package]
name = "oci"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Enseada
enseada = { path = "../lib" }
hold = "0.1.0-alpha.4"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
http = "0.2"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
bytes = "0.5"

# Olly
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"