[package]
name = "old_api"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
oauth = { path = "../oauth" }
enseada = { path = "../lib" }
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }

[build-dependencies]
walkdir = "^2.3"
