[package]
name = "enseada_server"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "enseada-server"
path = "src/main.rs"

[dependencies]
# Enseada
couchdb = { path = "../couchdb" }
enseada = { path = "../lib" }
users = { path = "../users" }
observability = { path = "../observability" }
rbac = { path = "../acl" }
oci = { path = "../oci" }
maven = { path = "../maven" }
oauth = { path = "../oauth" }
api = { path = "../old_api" }
events = { path = "../events" }

hold_s3 = "0.1.0-alpha.5"

# Actix
actix = "0.11.0-beta.3"
actix-web = { version = "3.0", features = ["default", "rustls"] }
actix-rt = "1.0"
actix-files = "0.3"
actix-tls = { version = "1.0", features = ["rustls"] }
actix-session = "0.4"
actix-web-httpauth = "0.5"
actix-cors = "0.3"
http = "0.2"
askama = "0.10"
askama_actix = "0.11"
rust-embed = "5.6"
mime_guess = "2.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"

# Validations
validator = "0.10"
validator_derive = "0.10"

# Async
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "0.2", features = ["sync"] }

# Security
rustls = "0.18"

# Macros
derive_more = "0.99"
derivative = "1.0"
lazy_static = "1.4"

# Observability
#tracing = { version = "0.1", features = ["log-always"] }
tracing = { version = "0.1", features = [] }
tracing-subscriber = "0.2"
#tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "smallvec", "fmt", "ansi", "chrono", "json"] }
tracing-futures = "0.2"

# Miscellaneous
bytes = "0.5"
config = "0.9"
glob = "0.3"
include_dir = "0.6"
log = "0.4"
reqwest = { version = "~0.11", features = ["json", "rustls-tls", "stream"] }
snafu = "0.6"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.12"
structopt = { version = "0.3", default-features = false }

[dependencies.log4rs]
version = "0.10"
features = [
    "console_appender",
    "compound_policy",
    "delete_roller",
    "fixed_window_roller",
    "size_trigger",
    "json_encoder",
    "pattern_encoder",
    "threshold_filter"
]
