[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enseada-server"
path = "src/main.rs"

[dependencies]
futon = { path = "../futon" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.4.8", features = ["json", "headers"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["full"] }
tower-service = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
clap = { version = "3", features = ["derive", "env", "unicode", "wrap_help"] }
dotenv = "0.15"

# Logging
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["json", "env-filter"] }
