[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enseada-server"
path = "src/main.rs"

[dependencies]
futon = { path = "futon" }
auth = { path = "auth" }
libapi = { path = "libapi" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web
hyper = { version = "0.14", features = ["server", "http1", "http2"]}
axum = { version = "0.5", features = ["json", "headers"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }
tower-service = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "1" }

# Config
clap = { version = "3", features = ["derive", "env", "unicode", "wrap_help"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
