[package]
name = "users"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
controller_runtime = { path = "../controller_runtime" }
serde = { version = "^1", features = ["derive"] }
slog = "^2"
