[package]
name = "cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futon = { path = "../futon" }
thiserror = "1"
async-trait = "0.1"
time = { version = "0.3" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
