[package]
name = "libapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.7", features = ["serde", "formatting"] }
schemars = "0.8.8"
http = "0.2"
anyhow = "1"
axum = "0.5"
futon = { path = "../futon" }
cqrs = { path = "../cqrs" }
ulid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
